Adde TinyGInAlarmError. Changed the interface for g.list() to return a promise.

--- a/docs/ReadMe.adoc
+++ b/docs/ReadMe.adoc
@@ -97,6 +97,11 @@ TinyGResponseError::
   * *When*: During an open connection
   * *Data Contents*: The exact _parsed_ JSON response from the TinyG.
 
+TinyGInAlarmError::
+  * *Meaning*: TinyG reported an error because the machine is in an Alarm state
+  * *When*: During an open connection, after an Alarm was triggered. There will be several of these after a <<flush,`flush()`>> that can be safely ignored.
+  * *Data Contents*: The exact _parsed_ JSON response from the TinyG.
+
 TinyGOpenError::
   * *Meaning*: TinyG failed to open a connection. This may occur if one was already open, in which case there is no change to the already-open connection, but the new one was not attempted.
   * *When*: Any time after <<open,`g.open()`>> has been called.
@@ -386,14 +391,41 @@ g.get("xvm")
   `done_callback`:: (_Optional._) A function for the TinyG object to call when the file has finished sending. This will only be called after all lines have been sent AND `stat` has gone to 3 (movement stopped), 4 (program end via `M2` or `M30`), or 6 (alarm).
 --
 
-[[list]]
-##### list( _callback_ )
-  * Get a list of TinyGs available.
-  * _TODO_
+[[flush]]
+##### flush( )
+  * Clears the current send buffer, cancels any active file send, and sends a job kill (^-D) and alarm clear (`{clr:n}`) to the TinyG.
 +
 --
   *Returns:*:: _nothing_
-  `callback`::
+--
+
+
+[[list]]
+##### list( )
+  * Asynchronously get a list of TinyGs available. Returns a promise.
++
+--
+  *Returns:*:: http://documentup.com/kriskowal/q/[Q promise]. The promise will pass in the list of TinyG objects.
+[source,javascript]
+.list-example.js
+----
+var TinyG = require("tinyg");
+// Then create a TinyG object called 'g'
+var g = new TinyG();
+g.list().then(function(results) {
+    console.log(util.inspect(results));
+  }).catch(function(err) { couldnt_list(err); });
+----
+[source,javascript]
+.list-results.js
+----
+// Results of the above should look like.
+
+[ { path: '/dev/cu.usbmodem142413',
+    serialNumber: '021323257343',
+    dataPortPath: '/dev/cu.usbmodem142411' } ]
+----
+
 --
 
 [[openFirst]]
